# violet

./: .gitignore  Cargo.toml  Dockerfile  README.md  debug.docker-compose.yml  deploy.docker-compose.yml  docker-compose.yml  example.env
.cargo/: config.toml
migrations/: 20220327180205_base_database.sql
src/: authentication_middleware.rs  channels.rs  config.rs  consts.rs  extractors.rs  jwt.rs  main.rs  mysql_db.rs  tokens.rs
src/controllers/: apps.rs  auth.rs  authentication_extractor.rs  errors.rs  errors_authentication_middleware.rs  mod.rs  test.rs
src/controllers/apps/: errors.rs  mod.rs  tokens.rs
src/database/: app_tokens.rs  apps.rs  errors.rs  mod.rs  users.rs
src/discordbot/: events.rs  helpers.rs  mod.rs
src/discordbot/commands/: app_event_tracker.rs  mod.rs
src/mysql_db/: app_table.rs  mod.rs  reports_table.rs
src/webserver/: dtos.rs  mod.rs
