[package]
name = "violet"
version = "0.1.0"
authors = ["Takasakiii <lucasmc2709@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^3.3.2"
serde = {version = "^1.0.125", features = ["derive"]}
mysql = "^20.1.0"
dotenv = "^0.15.0"
tokio = {version = "^1.5.0", features = ["macros", "rt-multi-thread"]}
serenity = "^0.10.5"
env_logger = "^0.8.3"
