[package]
name = "violet"
version = "0.2.0-alpha"
authors = ["Takasakiii <lucasmc2709@live.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.5.11", features = [
    "runtime-tokio-rustls",
    "mysql",
    "migrate",
] }
actix-web = "4.0.1"
log = "0.4.16"
env_logger = "0.9.0"
figment = { version = "0.10.6", features = ["env", "toml"] }
serde = { version = "1.0.136", features = ["derive"] }
bcrypt = "0.12"
validator = { version = "0.14.0", features = ["derive"] }
serde_json = "1.0.79"
jsonwebtoken = "8.0.1"
